# qrcode_styled

./: .gitignore  404.html  LICENSE  README.md  index.html  publish  pyproject.toml  retype.yml  robots.txt  test.py
.github/workflows/: publish.yml  retype.yml
changelog/: index.html
get-started/: index.html
qrcode_styled/: __init__.py  main.py  types.py
qrcode_styled/base/: image.py
qrcode_styled/pil/: image.py
qrcode_styled/pil/figures/: base.py  base.pyi  corner.py  dot.py
qrcode_styled/svg/: image.py
qrcode_styled/svg/figures/: base.py  base.pyi  corner.py  dot.py
resources/js/: config.js  prism.js  search.json
wiki/: changelog.md  changelog.yml  get-started.md  get-started.yml  index.md  index.yml
wiki/code/: get-started.py
